Fix style issue on Safari
fixes #165

--- a/website/src/pages/styles.module.css
+++ b/website/src/pages/styles.module.css
@@ -24,6 +24,7 @@
 
 .mainTitle > img {
   width: 56px;
+  height: 56px;
   margin-right: 10px;
 }
 
